@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/doxygen-1.5.7.1.ebuild,v 1.4 2009/05/30 08:19:53 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/doxygen-1.5.7.1.ebuild,v 1.5 2009/12/26 17:24:39 pva Exp $
 
 EAPI=1
 
@@ -24,7 +24,7 @@ RDEPEND="qt3? ( x11-libs/qt:3 )
 	dev-lang/python
 	virtual/libiconv
 	media-libs/libpng
-	virtual/ghostscript
+	app-text/ghostscript-gpl
 	!nodot? ( >=media-gfx/graphviz-2.6
 		media-libs/freetype )"
 DEPEND=">=sys-apps/sed-4
