@@ -1,6 +1,13 @@
 # ChangeLog for app-doc/doxygen
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/ChangeLog,v 1.170 2009/09/25 18:32:10 nerdboy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-doc/doxygen/ChangeLog,v 1.171 2009/12/26 17:24:39 pva Exp $
+
+  26 Dec 2009; Peter Volkov <pva@gentoo.org> doxygen-1.4.7.ebuild,
+  doxygen-1.5.4.ebuild, doxygen-1.5.5.ebuild, doxygen-1.5.6.ebuild,
+  doxygen-1.5.7.1.ebuild, doxygen-1.5.8-r1.ebuild, doxygen-1.5.9.ebuild,
+  doxygen-1.6.1.ebuild:
+  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
+  implementation left in the tree.
 
 *doxygen-1.6.1 (25 Sep 2009)
 
